# chip8

./: .gitignore  .gitmodules  README.md
assembler/: chip8.inc  hello_world.nasm
builds/cmake/: CMakeLists.txt  log.txt
builds/vs/: chip8-test.vcxproj  chip8-test.vcxproj.filters  chip8.sln  chip8.vcxproj  chip8.vcxproj.filters  packages.config
include/clparser/: Argument.hpp  ArgumentConcept.hpp  ArgumentFormatException.hpp  ArgumentNotFoundException.hpp  CommandLineOptions.hpp  CommandLineParser.hpp  IArgument.hpp  IArgumentVisitor.hpp  NamedArgument.hpp  PositionalArgument.hpp
include/cpu/: Cpu.hpp  CpuState.hpp  Font.hpp  Gpu.hpp  IGpu.hpp  InstructionBinder.hpp  InstructionBinding.hpp  InstructionSet.hpp  Registers.hpp
include/emulator/: AudioInitializationException.hpp  Emulator.hpp  WindowInitializationException.hpp
include/logging/: Logger.hpp  LoggerConcept.hpp  Severity.hpp
lib/clparser/: CommandLineOptions.cpp  CommandLineParser.cpp
lib/cpu/: Cpu.cpp  Gpu.cpp  RomLoadFailureException.hpp  Timer.cpp
lib/emulator/: AudioController.cpp  AudioController.hpp  Emulator.cpp  EmulatorWindow.cpp  EmulatorWindow.hpp  SDLChip8KeyMapping.hpp
src/: .clang-format  CommandLineOptions.hpp  ExitCode.hpp  Logger.cpp  Logger.hpp  main.cpp  metadata.hpp
src/clparser/: Argument.hpp  ArgumentConcept.hpp  ArgumentFormatException.hpp  ArgumentNotFoundException.hpp  CommandLineOptions.cpp  CommandLineOptions.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Field.hpp  IArgument.hpp  IArgumentVisitor.hpp  ICommandLineOptions.hpp  IField.hpp  NamedArgument.hpp  Optional.hpp  PositionalArgument.hpp  Required.hpp
src/emulator/: AudioController.cpp  AudioException.hpp  Cpu.cpp  Cpu.hpp  CpuExecutionException.hpp  Emulator.cpp  Emulator.hpp  EmulatorWindow.cpp  EmulatorWindow.hpp  Gpu.cpp  Gpu.hpp  IBinder.hpp  ICpu.hpp  IFrameBuffer.hpp  IGpu.hpp  ITimer.hpp  InstructionBinder.hpp  InstructionSet.hpp  Key.hpp  PointerRegister.hpp  Registers.hpp  SDLChip8KeyMapping.hpp  Timer.cpp  Timer.hpp
src/logging/: LoggerConcept.hpp
test/: CommandLineParserIntegrationTests.cpp  CommandLineParserTest.cpp  CommandLineParserUnitTests.cpp  CpuUnitTests.cpp  GpuUnitTests.cpp  InstructionBinderUnitTests.cpp  Test.cpp
